--- a/spine/branches/0.8.8/ChangeLog
+++ b/spine/branches/0.8.8/ChangeLog
@@ -1,5 +1,8 @@
 ﻿The Cacti Group | spine
 
+0.8.8c
+-bug: remove obsolete reference causing pre-compile issues
+
 0.8.8b
 -bug: set appropriate mysql 5.5+ timeouts
 
