--- a/cacti/branches/0.8.8/docs/CHANGELOG
+++ b/cacti/branches/0.8.8/docs/CHANGELOG
@@ -21,6 +21,8 @@ Cacti CHANGELOG
 -feature: Merge SSL Plugin
 -feature: Merge Watermark Plugin
 -feature: Merge UGroup Plugin
+-feature: Merge DSStats Plugin
+-feature: Merge Settings Pluign
 -feature: Make all page refresh Ajax based
 -feature: Make Suggest Naming more consistent
 -feature: Add State Filter for Pugins Page
