- When editing a tree, use overflow to keep GUI manageable. - Enhance lib/ping.php error checking - Clean out some more dos2unix issue - Add some comments to lib/rrd.php - Add some additional checks in cdef.php - Major simplification of Graph Settings page.  Add more Dynamic views to keep it simple.

--- a/cacti/branches/0.8.8/docs/CHANGELOG
+++ b/cacti/branches/0.8.8/docs/CHANGELOG
@@ -1,6 +1,8 @@
 Cacti CHANGELOG
 
 0.8.8d
+-feature#0002225: Make -Cc SNMP option system wide configurable (disable increasing OID check)
+-bug#0002257: status_fail_date and status_rec_date are initialised when a host recovers
 -bug#0002482: Correct count of hosts using a Host Template
 -bug: Make Cacti's permissions consistent for RBAC
 -feature: Add Themes to WebGUI (deprecation of $colors array)
