Fixed and added:
1) Realtime integration complete
2) Added option to update sys OID's in spine and cmd.php
3) Updated poller as well
4) Made cmd.php argument processing sane
5) Remove one more 'rrdtool_graph' variant (aka Realtime)
6) Moved Realtime settings under Visual
7) Added some core Javascript utility functions
8) Added minimum width to dropdowns to make more appealing
9) Cleanup some redundant syntax in headers
10) Typos in format files

--- a/cacti/branches/0.8.8/docs/CHANGELOG
+++ b/cacti/branches/0.8.8/docs/CHANGELOG
@@ -24,7 +24,9 @@ Cacti CHANGELOG
 -feature: Merge Watermark Plugin
 -feature: Merge UGroup Plugin
 -feature: Merge DSStats Plugin
--feature: Merge Settings Pluign
+-feature: Merge Settings Plugin
+-feature: Merge Realtime Plugin
+-feature: Merge Reporting (Nectar) Plugin
 -feature: Make all page refresh Ajax based
 -feature: Make Suggest Naming more consistent
 -feature: Add State Filter for Pugins Page
