--- a/spine/branches/0.8.8/ChangeLog
+++ b/spine/branches/0.8.8/ChangeLog
@@ -1,5 +1,9 @@
 ﻿The Cacti Group | spine
 
+0.8.8d
+
+-feature: add snmp system information gathering
+
 0.8.8c
 -bug: remove obsolete reference causing pre-compile issues
 
