Set 0.8.8e version and upgrade functions

--- a/cacti/tags/0.8.8e/docs/CHANGELOG
+++ b/cacti/tags/0.8.8e/docs/CHANGELOG
@@ -1,5 +1,8 @@
 Cacti CHANGELOG
 
+0.8.8e
+-d is for disaster
+
 0.8.8d
 -feature: Remove un-needed fonts and javascript files
 -bug: Fixed SQL injection VN: JVN#78187936 / TN:JPCERT#98968540 
