--- a/cacti/tags/0.8.8e/docs/CHANGELOG
+++ b/cacti/tags/0.8.8e/docs/CHANGELOG
@@ -4,9 +4,9 @@ Cacti CHANGELOG
 -bug: Fixed issue with graph zooming failing to work
 -bug: Fixed various SQL Injection vectors
 -bug#0002569: Impossible to have a URL pointing directly to a graph
--bug#0002574: SQL Injection Vulnerabilitie in graph items and graph template items
+-bug#0002574: SQL Injection Vulnerabilities in graph items and graph template items
 -bug#0002577: CVE-2015-4634 - SQL injection in graphs.php
--bug#0002579: SQL Injection Vulnerabilitie in data sources
+-bug#0002579: SQL Injection Vulnerabilities in data sources
 -bug#0002580: SQL Injection in cdef.php
 -bug#0002582: SQL Injection in data_templates.php
 -bug#0002583: SQL Injection in graph_templates.php
