--- a/cacti/tags/0.8.8f/docs/CHANGELOG
+++ b/cacti/tags/0.8.8f/docs/CHANGELOG
@@ -1,5 +1,9 @@
 Cacti CHANGELOG
 
+0.8.8f
+-bug:0002599: 0.8.8e Poller Script Parser is Broken
+-bug:0002600: cli/upgrade_database.php is missing releases
+
 0.8.8e
 -bug: Fixed issue with graph zooming failing to work
 -bug: Fixed various SQL Injection vectors
