--- a/spine/tags/0.8.8g/ChangeLog
+++ b/spine/tags/0.8.8g/ChangeLog
@@ -4,6 +4,7 @@
 -bug:0002610: Spine is trying to use mysql results after data being freed
 -bug:0002639: Spine does not respect snmp_retries from the database
 -bug:0002549: Spine: hasCaps() always returns FALSE
+-bug:0002638: Spine: ping_udp() uses uninitialised socket timeout 
 
 0.8.8f
 -bug:0002604: cacti-spine, configure script ignores LDFLAGS in certain situations
