--- a/spine/tags/0.8.8g/ChangeLog
+++ b/spine/tags/0.8.8g/ChangeLog
@@ -5,6 +5,7 @@
 -bug:0002639: Spine does not respect snmp_retries from the database
 -bug:0002549: Spine: hasCaps() always returns FALSE
 -bug:0002638: Spine: ping_udp() uses uninitialised socket timeout 
+-bug:0002654: On RHEL 6.5, spine ./configure builds Makefile without crypto support
 
 0.8.8f
 -bug:0002604: cacti-spine, configure script ignores LDFLAGS in certain situations
