change log catchup for #2647

--- a/cacti/tags/0.8.8g/docs/CHANGELOG
+++ b/cacti/tags/0.8.8g/docs/CHANGELOG
@@ -16,6 +16,7 @@ in Tree Mode
 -bug:0002618: bug/syntax error in html_utility.php
 -bug:0002646: SQL injection in graph.php
 -bug:0002656: Authentication using web authentication as a user not in the cacti database allows complete access
+-bug:0002647: 0.8.8g rev 7767 Can add cacti devices to graph tree "Save Failed"
 
 0.8.8f
 -bug:0002599: 0.8.8e Poller Script Parser is Broken
