--- a/cacti/tags/0.8.8g/docs/CHANGELOG
+++ b/cacti/tags/0.8.8g/docs/CHANGELOG
@@ -21,6 +21,7 @@ in Tree Mode
 -bug:0002652: CVE-2015-8604: SQL injection in graphs_new.php
 -bug:0002655: CVE-2015-8377: SQL injection vulnerability in the host_new_graphs_save function in graphs_new.php
 -bug:0002629: Cacti lacks tab icons in chrome from android
+-bug:0002619: Fix incorrect placement of htmlspecialchars() in tree.php
 
 0.8.8f
 -bug:0002599: 0.8.8e Poller Script Parser is Broken
