--- a/cacti/tags/0.8.8g/docs/CHANGELOG
+++ b/cacti/tags/0.8.8g/docs/CHANGELOG
@@ -2,6 +2,7 @@ Cacti CHANGELOG
 
 0.8.8g
 -bug:0002161: Graph management "graph()" function conflicts with graphviz PECL extension’s graph()
+-bug:0002320: Unable to delete more than 500 graphs at once
 -bug:0002591: graph_view.php - unable to advance to Next Page in Tree View
 -bug:0002608: cacti 0.8.8f - Data Templates - Poller/script issue with backslash
 -bug:0002618: bug/syntax error in html_utility.php
