--- a/cacti/tags/0.8.8g/docs/CHANGELOG
+++ b/cacti/tags/0.8.8g/docs/CHANGELOG
@@ -27,6 +27,7 @@ in Tree Mode
 -bug:0002629: Cacti lacks tab icons in chrome from android
 -bug:0002619: Fix incorrect placement of htmlspecialchars() in tree.php
 -bug:0002642: ping.pl does not take into account host port numbers
+-bug:0002567: RRDTool 1.5.x Support 
 
 0.8.8f
 -bug:0002599: 0.8.8e Poller Script Parser is Broken
