Fix up Changelog

--- a/cacti/tags/0.8.8g/docs/CHANGELOG
+++ b/cacti/tags/0.8.8g/docs/CHANGELOG
@@ -1,7 +1,7 @@
 Cacti CHANGELOG
 
 0.8.8g
--bug:0002161: Graph management "graph()" function conflicts with graphviz PECL extension’s graph()
+-bug:0002161: Graph management "graph()" function conflicts with graphviz PECL extension graph()
 -bug:0002320: Unable to delete more than 500 graphs at once
 -bug:0002591: graph_view.php - unable to advance to Next Page in Tree View
 -bug:0002608: cacti 0.8.8f - Data Templates - Poller/script issue with backslash
@@ -10,12 +10,10 @@ Cacti CHANGELOG
 -bug:0002617: PHP Warning is thrown when trying to include auth_login.php
 -bug:0002623: log warning display wrong time_interval
 -bug:0002627: Graph tree doesn't work in Internet Explorer
--bug:0002601: graphs_new.php query not sorted as per definition
-xml:index_order
+-bug:0002601: graphs_new.php query not sorted as per definition xml:index_order
 -bug:0002625: Plugins don't display the next page
 -bug:0002631: RRDtool export not XML compliant - results in empty CSV exports
--bug:0002622: graph_view.php -- Navigation and Content Areas are not visible
-in Tree Mode
+-bug:0002622: graph_view.php -- Navigation and Content Areas are not visible in Tree Mode
 -bug:0002626: Unable to add two users in a row - Notice: Undefined index: id
 -bug:0002620: Unable to copy user
 -bug:0002618: bug/syntax error in html_utility.php
