--- a/cacti/tags/0.8.8h/docs/CHANGELOG
+++ b/cacti/tags/0.8.8h/docs/CHANGELOG
@@ -3,6 +3,7 @@ Cacti CHANGELOG
 0.8.8h
 -bug:0002656: Authentication using web authentication as a user not in the cacti database allows complete access (refixed)
 -bug:0002673: [CVE-2016-3659]Cacti graph_view.php SQL Injection Vulnerability
+-bug:0002681: generate_graph_def_name() generates reserved word "cf"
 
 0.8.8g
 -bug:0002161: Graph management "graph()" function conflicts with graphviz PECL extension graph()
