--- a/spine/tags/0.8.8h/ChangeLog
+++ b/spine/tags/0.8.8h/ChangeLog
@@ -1,6 +1,7 @@
 ﻿The Cacti Group | spine
 
 0.8.8h
+-bug:0002659: wrong information about spine setup for icmps
 
 0.8.8g
 -bug:0002380: please build man page for spine
